--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="iconselected">#FF6156E2</color>
     <color name="background">#FF0B071E</color>
+    <color name="adsad">FF0B071E</color>
 </resources>
