dat update bottom navigation bar

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        tools:ignore="MenuTitle" />
-    <item
-        android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_search"
-        tools:ignore="MenuTitle" />
+
+        android:title="Home" />
+
     <item
         android:id="@+id/trendFragment"
         android:icon="@drawable/ic_trend"
-        tools:ignore="MenuTitle" />
+        android:iconTint="@color/white"
+
+        android:title="Trend" />
+    <item
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/ic_search"
+        android:title="Search" />
     <item
         android:id="@+id/personalFragment"
         android:icon="@drawable/ic_personal"
-        tools:ignore="MenuTitle" />
+        android:title="Personal" />
 </menu>
