--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -9,16 +9,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:weightSum="10">
-        <Button
+        android:layout_marginTop="5dp"
+        android:weightSum="10"
+        android:id="@+id/element_top_note">
+        <ImageButton
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:layout_margin="5dp"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back_img"
+            android:background="@color/white"
+            android:id="@+id/button_back_note"
             />
         <TextView
             android:layout_width="0dp"
@@ -32,20 +37,43 @@
             android:textSize="17sp"
             android:gravity="center"
             />
+
         <Spinner
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="3"
-            android:background="@color/white"
-            />
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:background="@color/orange"
+            android:layout_marginStart="3dp"
+            android:background="@drawable/spinner_border_round"
+            android:gravity="center"
+            android:id="@+id/spinner_type_note"
             />
 
+        <Spinner
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="3"
+            android:background="@drawable/spinner_border_round_orange"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:backgroundTint="@color/orange"
+            />
 
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/back_img"
+        app:layout_constraintTop_toBottomOf="@+id/element_top_note"
+        android:id="@+id/imageview_note"
+        android:layout_marginTop="8dp"
+        />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview_note"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
