--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,10 +9,10 @@
 
     <item
         android:id="@+id/trendFragment"
-        android:icon="@drawable/ic_trend"
+        android:icon="@drawable/ic_note"
         android:iconTint="@color/white"
 
-        android:title="Trend" />
+        android:title="Note" />
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"
