--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,6 +19,6 @@
         android:title="Search" />
     <item
         android:id="@+id/personalFragment"
-        android:icon="@drawable/ic_personal"
-        android:title="Personal" />
+        android:icon="@drawable/ic_menu"
+        android:title="Menu" />
 </menu>
