--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="BottomNavTextActive">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="BottomNavTextInactive">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/black</item>
+    <style name="NoRippleBottomNav" parent="Widget.MaterialComponents.BottomNavigationView">
+        <!-- Không ripple -->
+        <item name="itemRippleColor">@android:color/transparent</item>
     </style>
 
 </resources>
