--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="background">#FFFFFF</color>
     <color name="orange">#FF5722</color>
     <color name="unselectedicon">#A2A2A2</color>
+    <color name="colorForDevider">#F9F9F9</color>
 
 
 </resources>
