--- a/app/src/main/res/layout/spinner_list.xml
+++ b/app/src/main/res/layout/spinner_list.xml
@@ -1,12 +1,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/spinner_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/trans"
     android:textColor="#000000"
     android:textSize="16sp"
-    android:padding="10dp"
-    android:drawablePadding="5dp"
-    android:gravity="center_vertical"
-    app:drawableEndCompat="@drawable/arrow_down" />
+    android:padding="12dp"
+    android:background="#FFFFFF"
+    />
