--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -32,7 +32,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageView
-            android:id="@+id/imageViewSettings"
+            android:id="@+id/btnSetting"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="16dp"
@@ -98,10 +98,10 @@
                 app:layout_constraintStart_toEndOf="@id/cardViewProfileIcon"
                 app:layout_constraintTop_toTopOf="@id/cardViewProfileIcon"
                 app:layout_constraintBottom_toBottomOf="@id/cardViewProfileIcon"
-                app:layout_constraintEnd_toStartOf="@id/buttonEditProfile"/>
+                app:layout_constraintEnd_toStartOf="@id/btnEditProfile"/>
 
             <Button
-                android:id="@+id/buttonEditProfile"
+                android:id="@+id/btnEditProfile"
 
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
@@ -159,7 +159,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:background="#E0E0E0"
+                android:background="@color/colorForDevider"
                 app:layout_constraintTop_toBottomOf="@id/layoutFollowerInfo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -249,7 +249,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:background="#E0E0E0"
+                android:background="@color/colorForDevider"
                 app:layout_constraintTop_toBottomOf="@id/layoutPremium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -423,7 +423,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:background="#E0E0E0"
+                android:background="@color/colorForDevider"
                 app:layout_constraintTop_toBottomOf="@id/textViewNote"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
