--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="orange">#FF5722</color>
     <color name="unselectedicon">#A2A2A2</color>
     <color name="trans">#00FFFFFF</color>
-
+    <color name="blue">#0080FF</color>
 </resources>
