--- a/app/src/main/res/layout/item_folder_recycleview.xml
+++ b/app/src/main/res/layout/item_folder_recycleview.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="50dp"
-    android:paddingTop="10dp">
+    android:paddingBottom="15dp">
 
     <ImageButton
         android:id="@+id/folderButton"
@@ -24,7 +24,7 @@
         android:weightSum="5"
         android:gravity="center"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         >
         <TextView
             android:id="@+id/textTitle"
