--- a/app/src/main/res/layout/item_new_recycleview.xml
+++ b/app/src/main/res/layout/item_new_recycleview.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="50dp"
-    android:paddingTop="15dp">
+    android:paddingBottom="15dp">
 
     <LinearLayout
         android:id="@+id/newFolderButton"
@@ -34,7 +34,7 @@
         android:textColor="#2196F3"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         app:drawableEndCompat="@drawable/ic_expand"
         app:drawableTint="@color/blue" />
 </LinearLayout>
