--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
         android:title="Note" />
     <item
         android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_community"
         android:title="Search" />
     <item
         android:id="@+id/personalFragment"
