--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -2,14 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#E67E22" />
-            <corners android:radius="16dp" />
+            <solid android:color="@color/selectedicon" />
+            <corners android:radius="20dp" />
+            <stroke android:width="1dp" android:color="@color/selectedicon" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#F5F5F5" />
-            <corners android:radius="16dp" />
+            <solid android:color="@color/colorForPost" />
+            <corners android:radius="20dp" />
+            <stroke android:width="1dp" android:color="@color/selectedicon" />
         </shape>
     </item>
 </selector>
