update new note and folder content

--- a/app/src/main/res/layout/item_note_recycleview.xml
+++ b/app/src/main/res/layout/item_note_recycleview.xml
@@ -36,6 +36,7 @@
             />
 
         <Button
+            android:id="@+id/note_expand_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.5"
