--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -26,6 +26,7 @@
             android:contentDescription="@string/back"
             android:src="@drawable/back_img" />
         <TextView
+            android:id="@+id/text_title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
