--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="unselectedicon">#A2A2A2</color>
     <color name="trans">#00FFFFFF</color>
     <color name="blue">#0080FF</color>
+    <color name="delete_red">#FF0000</color>
 </resources>
