--- a/app/src/main/res/layout/fragment_search_post.xml
+++ b/app/src/main/res/layout/fragment_search_post.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:background="@android:color/white"
-    tools:context=".presentation.searchPost.SearchPostFragment">
+    tools:context=".presentation.communitySearchPost.SearchPostFragment">
 
     <!-- Header với back button và search bar -->
     <LinearLayout
