--- a/app/src/main/res/drawable/ic_color_palette.xml
+++ b/app/src/main/res/drawable/ic_color_palette.xml
@@ -1,9 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#000000"
-        android:pathData="M12,2C6.49,2 2,6.49 2,12s4.49,10 10,10c1.38,0 2.5,-1.12 2.5,-2.5c0,-0.61 -0.23,-1.2 -0.64,-1.67c-0.08,-0.1 -0.13,-0.21 -0.13,-0.33c0,-0.28 0.22,-0.5 0.5,-0.5H16c3.31,0 6,-2.69 6,-6C22,6.04 17.51,2 12,2zM17.5,13c-0.83,0 -1.5,-0.67 -1.5,-1.5s0.67,-1.5 1.5,-1.5s1.5,0.67 1.5,1.5S18.33,13 17.5,13zM14.5,9C13.67,9 13,8.33 13,7.5S13.67,6 14.5,6S16,6.67 16,7.5S15.33,9 14.5,9zM5,11.5C5,10.67 5.67,10 6.5,10S8,10.67 8,11.5S7.33,13 6.5,13S5,12.33 5,11.5zM11,7.5C11,8.33 10.33,9 9.5,9S8,8.33 8,7.5S8.67,6 9.5,6S11,6.67 11,7.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="32" android:viewportWidth="32" android:width="24dp">
+      
+    <path android:fillColor="#FF000000" android:pathData="M10,12m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M16,9m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M22,12m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M23,18m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M19,23m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M16.54,2A14,14 0,0 0,2 16a4.82,4.82 0,0 0,6.09 4.65l1.12,-0.31A3,3 0,0 1,13 23.24L13,27a3,3 0,0 0,3 3A14,14 0,0 0,30 15.46,14.05 14.05,0 0,0 16.54,2ZM24.65,24.31A11.93,11.93 0,0 1,16 28a1,1 0,0 1,-1 -1L15,23.24a5,5 0,0 0,-5 -5,5.07 5.07,0 0,0 -1.33,0.18l-1.12,0.31A2.82,2.82 0,0 1,4 16,12 12,0 0,1 16.47,4 12.18,12.18 0,0 1,28 15.53,11.89 11.89,0 0,1 24.65,24.32Z"/>
+    
 </vector>
