--- a/app/src/main/res/drawable/ic_eraser.xml
+++ b/app/src/main/res/drawable/ic_eraser.xml
@@ -1,12 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#000000"
-        android:pathData="M17.26,18c0.22,-0.01 0.4,-0.18 0.4,-0.4V5.4c0,-0.22 -0.18,-0.39 -0.4,-0.4H6.74C6.52,5.01 6.34,5.18 6.34,5.4v12.2c0,0.22 0.18,0.39 0.4,0.4H17.26zM20.94,19H3.06C1.9,19 1,18.1 1,16.94V7.06C1,5.9 1.9,5 3.06,5h17.88C22.1,5 23,5.9 23,7.06v9.88C23,18.1 22.1,19 20.94,19z"/>
-    <path
-        android:fillColor="#000000"
-        android:pathData="M18.25,20H5.75c-0.41,0 -0.75,0.34 -0.75,0.75v0.5C5,21.66 5.34,22 5.75,22h12.5c0.41,0 0.75,-0.34 0.75,-0.75v-0.5C19,20.34 18.66,20 18.25,20z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24.12554dp" android:viewportHeight="442" android:viewportWidth="439.7" android:width="24dp">
+      
+    <path android:fillColor="#FF000000" android:pathData="M264.5,378.6c22.2,0 44.1,-9.8 58.7,-28.6l100.6,-129.3c25.2,-32.3 19.4,-79.1 -13,-104.3L281.7,15.7C266,3.5 246.5,-1.9 226.8,0.6C207.1,3 189.5,13 177.3,28.7L76.7,157.9c-17.4,22.3 -20,51.4 -9.3,75.7l-30.2,38.8c-23.5,30.1 -18,73.7 12.1,97.2l49.9,39l-98.9,0.5L0,441.7l278.4,0.3l0.1,-32.6l-51.5,-0.3l25,-31.7C256.2,378.2 260.4,378.6 264.5,378.6zM261.6,41.4L390.9,142c8.8,6.9 14.4,16.7 15.8,27.8c1.4,11.1 -1.6,22 -8.5,30.8L297.5,329.9c-6.9,8.8 -16.7,14.4 -27.8,15.8c-11,1.4 -22,-1.6 -30.8,-8.5L109.7,236.6c-18.2,-14.1 -21.4,-40.4 -7.3,-58.6L203,48.7C203,48.7 227,17.1 261.6,41.4zM185.8,409l-33.5,-0.2l-83,-64.9c-16,-12.4 -18.8,-35.5 -6.4,-51.5l24.8,-31.9c0.7,0.6 1.3,1.2 2,1.7l129.3,100.6c0.7,0.5 1.4,1 2,1.5L185.8,409z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M310.8,409.4h67.8v32.6h-67.8z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="M406.5,409.4h33.1v32.6h-33.1z"/>
+    
 </vector>
