--- a/app/src/main/res/drawable/ic_hand.xml
+++ b/app/src/main/res/drawable/ic_hand.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#000000"
-        android:pathData="M18,1.5c-2.45,0 -4.34,2.05 -4.5,4.55C13.34,3.55 11.45,1.5 9,1.5c-2.48,0 -4.5,2.02 -4.5,4.5 0,0.9 0.33,2.1 1,3.08V9c0,0.55 0.45,1 1,1s1,-0.45 1,-1V8c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v1c0,0.55 0.45,1 1,1s1,-0.45 1,-1V8c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v1c0,0.55 0.45,1 1,1s1,-0.45 1,-1V8.08c0.67,-0.98 1,-2.17 1,-3.08 0,-2.48 -2.02,-4.5 -4.5,-4.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="256" android:viewportWidth="256" android:width="24dp">
+      
+    <path android:fillColor="#FF000000" android:pathData="M188,40a28.2,28.2 0,0 0,-12 2.7L176,36a28,28 0,0 0,-54.6 -8.6A27.8,27.8 0,0 0,108 24,28.1 28.1,0 0,0 80,52v75.4l-7,-12.1A28,28 0,0 0,24.3 143c32.5,68.4 54.1,97 103.7,97a88.1,88.1 0,0 0,88 -88L216,68A28.1,28.1 0,0 0,188 40ZM200,152a72.1,72.1 0,0 1,-72 72c-20.2,0 -34.2,-5.5 -47,-18.2S56.3,173 38.7,135.9l-0.3,-0.6a11.6,11.6 0,0 1,-1.2 -9.1,11.8 11.8,0 0,1 5.6,-7.3 12,12 0,0 1,9.1 -1.2,11.6 11.6,0 0,1 7.2,5.6l22,38a8.1,8.1 0,0 0,9 3.7,7.9 7.9,0 0,0 5.9,-7.7L96,52a12,12 0,0 1,24 0v68a8,8 0,0 0,16 0L136,36a12,12 0,0 1,24 0v84a8,8 0,0 0,16 0L176,68a12,12 0,0 1,24 0Z"/>
+    
 </vector>
