--- a/app/src/main/res/layout-v31/item_note_recycleview.xml
+++ b/app/src/main/res/layout-v31/item_note_recycleview.xml
@@ -8,21 +8,14 @@
     android:paddingStart="50dp"
     android:paddingBottom="60dp">
 
-    <androidx.cardview.widget.CardView
+    <ImageView
+        android:id="@+id/imagePreview"
         android:layout_width="120dp"
         android:layout_height="160dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="1dp">
-
-        <ImageView
-            android:id="@+id/imagePreview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            android:background="@android:color/white"/>
-
-    </androidx.cardview.widget.CardView>
+        android:src="@drawable/down"
+        android:scaleType="centerCrop"
+        android:background="@drawable/rounded_image_background"
+        android:clipToOutline="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,8 +24,8 @@
         android:weightSum="5"
         android:gravity="center"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp">
-
+        android:layout_marginTop="8dp"
+        >
         <TextView
             android:id="@+id/textTitleNote"
             android:layout_width="0dp"
@@ -42,7 +35,8 @@
             android:textSize="16sp"
             tools:text="Ghi chú mới"
             android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            />
 
         <Button
             android:id="@+id/note_expand_button"
@@ -52,7 +46,7 @@
             android:background="@color/trans"
             android:drawableStart="@drawable/ic_expand"
             android:drawableTint="@color/blue"
-            android:gravity="left" />
+            android:gravity="left"/>
     </LinearLayout>
 
     <TextView
@@ -63,5 +57,5 @@
         android:textSize="15sp"
         android:textColor="#757575"
         tools:text="31 thg 3, 2025"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"/>
 </LinearLayout>
