--- a/app/src/main/res/drawable/border_round_12.xml
+++ b/app/src/main/res/drawable/border_round_12.xml
@@ -1,5 +1,6 @@
 <!-- res/drawable/rounded_spinner_border.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#F9F2ED" /> <!-- Màu nền, có thể thay đổi -->
-    <corners android:radius="10dp" /> <!-- Bán kính bo tròn -->
+    <corners android:radius="12dp" /> <!-- Bán kính bo tròn -->
+    <stroke android:color="@color/selectedicon" android:width="1dp" /> <!-- Màu và độ dày viền -->
 </shape>
