--- a/app/src/main/res/drawable/spinner_border_round_orange.xml
+++ b/app/src/main/res/drawable/spinner_border_round_orange.xml
@@ -1,5 +1,6 @@
 <!-- res/drawable/rounded_spinner_border.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EA4F1A" /> <!-- Màu nền, có thể thay đổi -->
-    <corners android:radius="10dp" /> <!-- Bán kính bo tròn --> <!-- Màu và độ dày viền -->
+    <solid android:color="@color/selectedicon" /> <!-- Màu nền, có thể thay đổi -->
+    <corners android:radius="12dp" />
+    <stroke android:color="#EDD6C8" android:width="1dp" />
 </shape>
