--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.noteScene.NoteActivity">
+    tools:context=".presentation.feature.noteScene.NoteActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
