--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
-    tools:context=".presentation.setting.SettingActivity">
+    tools:context=".presentation.feature.setting.SettingActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
