add logic community profile and refactor code

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,6 +44,7 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+
     </fragment>
 
     <fragment
@@ -58,8 +59,18 @@
 
     <fragment
         android:id="@+id/communityProfileFragment"
-        android:name="com.example.app_music.presentation.community.CommunityProfileFragment"
-        android:label="Profile" />
+        android:name="com.example.app_music.presentation.feature.community.communityProfile.CommunityProfileFragment"
+        android:label="Profile"
+        >
+        <action
+            android:id="@+id/action_communityProfileFragment_to_postDetailFragment"
+            app:destination="@id/postDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/communityPostingFragment"
